<resources>
    <string name="app_name">Pdp</string>
    <string name="groups">Groups</string>
    <string name="courses">Courses</string>
    <string name="mentors">Mentors</string>
    <string name="all_courses">Barcha kurslar</string>

    <!-- courses-->
    <string name="course_name">Course Name</string>
    <string name="course_desc">Description</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="add_student">Talaba qoshish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_mentor">Yangi mentor qushish</string>
    <string name="middle_name_of_mentor">Otasining ismi</string>
    <string name="add_mentor_btn">Qushish</string>
    <string name="surname_of_mentor">Familiyasi</string>
    <string name="mentor_name">Ismi</string>
    <string name="add_new_group">Yangi guruh qo\'shish</string>
    <string name="name_of_group">Guruh nomi</string>
</resources>