<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="false"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end">

        <Button
            android:id="@+id/close"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="16sp"
            app:strokeColor="@color/white" />

        <Button
            android:id="@+id/add"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="16sp"
            app:strokeColor="@color/white" />

    </LinearLayout>

</LinearLayout>